# observatory

./: .gitignore  README.md  Tiltfile
client/: package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx  store.ts
client/src/components/: ItemList.tsx
client/src/components/grid-map/: GridMap.tsx
client/src/lib/: api.ts  data.ts  duckdb.ts
client/src/stores/: itemStore.ts
server/: estimate_records.py  main.py  pyproject.toml  reddit_election_night_2024.py
server/data/: reddit-2024-11.torrent
server/scripts/: download_reddit_data
